--- a/index.html
+++ b/index.html
@@ -1,46 +1,82 @@
 <!DOCTYPE html>
 < lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">el="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Портфолио</title>
-</head>
-<body>
-    <div class="wrapper">
-    <header class="header"></header>
-    <div class="container"></div>
-    <nav class="nav">
-    <ul class="nav__list">
-<li class="nav__item">
-<a href="#" class="nav__list"> Contact </a>
-</li>
-    </ul>
-</nav>
-</div>
-</header>
-<main class="main">
-    <section class="about">
-<div class="main__title">
-<h2>Hi, I am John,
-    Creative Technologist</h2>
-</div>
-<div class="about__info">
-    <br> Lorem ipsum dolor sit   
-    <br> amet consectetur adipisicing elit. Optio quaerat cum,
-    <br> at necessitatibus libero autem beatae nostrum consequatur minima
-</div>
-<div class="button"> Download Resume</div>
-<div class="avatar">
-    <img src="img\JOHN.png" alt="" class="abot__img">
-</div>
-    </section>
-    </main>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="link rel=" preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+        el="preconnect" href="https://fonts.googleapis.com">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Портфолио</title>
+    </head>
+
+    <body>
+        <div class="wrapper">
+            <header class="header">
+                <div class="container"></div>
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="#" class="nav__list"> Contact </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__list"> Contact </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__list"> Contact </a>
+                        </li>
+                    </ul>
+                </nav>
+        </div>
+        </header>
+        <main class="main">
+            <section class="about">
+                <div class="about__info">
+                    <div class="title about__title">
+                        <h1>Hi, I am John,
+                            Creative Technologist</h1>
+                    </div>
+                    <div class="about__desc">
+                        <br> Lorem ipsum dolor sit
+                        <br> amet consectetur adipisicing elit. Optio quaerat cum,
+                        <br> at necessitatibus libero autem beatae nostrum consequatur minima
+                    </div>
+                    <div class="button"> Download Resume</div>
+                    <div class="avatar">
+                        <img src="img\JOHN.png" alt="" class="abot__img">
+                    </div>
+                </div>
+            </section>
+            <section class="recent-posts">
+                <div class="container">
+                    <div class="recent-posts__top">
+                        <div class="recent-posts__title">
+                            Recent posts
+                        </div>
+                        <a href="#" class="recent-posts__link"> View all</a>
+                    </div>
+                    <div class="recent-posts__articles">
+<article class="recent-posts__article">
+    <div class="recent-posts__subtitle">
+Making a design system from scratch 
+    </div>
+    <div class="recent-posts__info"> 12 Feb 2020<span
+        class="recent-posts__separator"></span> Design, Pattern 
+    </div>
+    <div class="recent-posts__text">
+Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+Culpa, mollitia laudantium illo aut sunt adipisci laboriosam neque doloremque error architecto enim 
+exercitationem minima praesentium! Nemo voluptatem minus autem error ipsum.
+    </div>
+</article>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 
-</html>
+    </html>
