--- a/index.html
+++ b/index.html
@@ -60,19 +60,20 @@
                         <a href="#" class="recent-posts__link"> View all</a>
                     </div>
                     <div class="recent-posts__articles">
-<article class="recent-posts__article">
-    <div class="recent-posts__subtitle">
-Making a design system from scratch 
-    </div>
-    <div class="recent-posts__info"> 12 Feb 2020<span
-        class="recent-posts__separator"></span> Design, Pattern 
-    </div>
-    <div class="recent-posts__text">
-Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-Culpa, mollitia laudantium illo aut sunt adipisci laboriosam neque doloremque error architecto enim 
-exercitationem minima praesentium! Nemo voluptatem minus autem error ipsum.
-    </div>
-</article>
+                        <article class="recent-posts__article">
+                            <div class="recent-posts__subtitle">
+                                Making a design system from scratch
+                            </div>
+                            <div class="recent-posts__info"> 12 Feb 2020<span class="recent-posts__separator"></span>
+                                Design, Pattern
+                            </div>
+                            <div class="recent-posts__text">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Culpa, mollitia laudantium illo aut sunt adipisci laboriosam neque doloremque error
+                                architecto enim
+                                exercitationem minima praesentium! Nemo voluptatem minus autem error ipsum.
+                            </div>
+                        </article>
                     </div>
                 </div>
             </section>
